--- a/app/blocks/form-panel/form-panel.scss
+++ b/app/blocks/form-panel/form-panel.scss
@@ -101,6 +101,11 @@
         pointer-events: auto;
       }
     }
+
+    &_fz16 {
+      font-size: 16px;
+      line-height: (26 / 16);
+    }
   }
 
   &_pd0 {
