--- a/app/blocks/link/link.scss
+++ b/app/blocks/link/link.scss
@@ -117,6 +117,14 @@
     @include screen('sm') {
       padding-left: 20px;
     }
+
+    &_v2 {
+      padding-left: 45px;
+
+      @include screen('sm') {
+        padding-left: 35px;
+      }
+    }
   }
 
   &_forward {
@@ -343,6 +351,11 @@
     &_plus-thin {
       width: 22px;
       height: 22px;
+    }
+
+    &_arrow5 {
+      height: 7px;
+      width: 14px;
     }
 
     #{$b}_no-shadow & {
