--- a/app/pages/sitemap/sitemap.pug
+++ b/app/pages/sitemap/sitemap.pug
@@ -12,6 +12,7 @@ block content
         +link(href="#popup-cancelation-contract-unsigned").js-popup-top Popup cancel request
         +link(href="#popup-cancelation-contract").js-popup-top Popup cancel contract
         +link(href="#popup-new-offer-h-v2").js-popup Popup New Tenancy offer update
+        +link(href="#popup-payment-summary").js-popup Popup Payment Summary
 
       +page-title._small Страницы (обновление от 27.12.2019)
       br
@@ -168,3 +169,4 @@ block popups
   +popup-cancelation-contract-unsigned#popup-cancelation-contract-unsigned
   +popup-cancelation-contract#popup-cancelation-contract
   +popup-new-offer-v2#popup-new-offer-h-v2
+  +popup-payment-summary#popup-payment-summary
