--- a/app/blocks/form/form.scss
+++ b/app/blocks/form/form.scss
@@ -80,6 +80,18 @@
       }
     }
 
+    &_mg11 {
+      &:not(:last-of-type) {
+        margin-bottom: 11px;
+      }
+    }
+
+    &_mg21 {
+      &:not(:last-of-type) {
+        margin-bottom: 21px;
+      }
+    }
+
     &_mg21 {
       &:not(:last-of-type) {
         margin-bottom: 21px;
@@ -109,6 +121,12 @@
     &_mg43 {
       &:not(:last-of-type) {
         margin-bottom: 43px;
+      }
+    }
+
+    &_mg46 {
+      &:not(:last-of-type) {
+        margin-bottom: 46px;
       }
     }
 
@@ -626,13 +644,33 @@
       }
     }
 
-    &_fz24  {
+    &_fz24 {
       @include text24;
 
       font-weight: 700;
 
       @include screen('sm') {
         @include heading-4;
+      }
+    }
+
+    &_fz22 {
+      @include text22;
+
+      letter-spacing: normal;
+
+      @include screen('sm') {
+        font-size: 20px;
+      }
+    }
+
+    &_fz30 {
+      font-size: 30px;
+      line-height: (35 / 30);
+      letter-spacing: normal;
+
+      @include screen('sm') {
+        font-size: 25px;
       }
     }
 
@@ -687,6 +725,10 @@
       }
     }
 
+    &_black {
+      color: $color-black;
+    }
+
     &_fw400 {
       font-weight: 400;
     }
@@ -709,7 +751,7 @@
 
     &_compensate {
       line-height: 1;
-      margin-top: -0.2em;
+      margin-top: -.2em;
 
       @include screen('md') {
         margin-top: -36px;
@@ -723,6 +765,10 @@
 
     &_light {
       color: $color-placeholder;
+    }
+
+    &_lighter {
+      color: $color-gray-lightest;
     }
 
     &_fz12 {
@@ -833,6 +879,14 @@
       margin-top: 6px;
     }
 
+    &_mgt34 {
+      margin-top: 34px;
+
+      @include screen('sm') {
+        margin-top: 25px;
+      }
+    }
+
     &_mgt44 {
       margin-top: 44px;
 
@@ -880,6 +934,10 @@
 
     &_lh13 {
       line-height: 1.3;
+    }
+
+    &_ls-normal {
+      letter-spacing: normal;
     }
 
     a {
@@ -1115,7 +1173,6 @@
       }
 
       &.is-stop {
-
         @include screen('md', min) {
           position: absolute;
         }
@@ -1346,7 +1403,6 @@
     }
 
     #{$b} {
-
       &__line {
         flex: 1;
 
@@ -1542,6 +1598,10 @@
     &:not(:last-child) {
       margin-bottom: 44px;
     }
+
+    &_mb21:not(:last-child) {
+      margin-bottom: 21px;
+    }
   }
 
   &__avatar-uploader {
@@ -1560,6 +1620,39 @@
     flex-wrap: wrap;
     align-content: flex-start;
     width: 100%;
+
+    &_row3 {
+      flex-wrap: nowrap;
+
+      @include screen('sm') {
+        flex-wrap: wrap;
+      }
+
+      &:not(:first-child) {
+        margin-top: -4px;
+      }
+
+      #{$b}__wrapper {
+        flex: 63;
+
+        &:first-child {
+          flex: 352;
+
+          @include screen('sm') {
+            width: 100%;
+            flex: none;
+          }
+        }
+
+        &:last-child {
+          flex: 126;
+        }
+
+        &:not(:last-child) {
+          margin-right: 20px;
+        }
+      }
+    }
   }
 
   &__count {
@@ -1999,7 +2092,7 @@
       margin-right: 30px;
 
       @include screen('md') {
-        width: calc((100% - 60px)/3);
+        width: calc((100% - 60px) / 3);
       }
 
       @include screen('sm') {
@@ -2017,7 +2110,7 @@
 
     #{$b}__list_columns_sm2 & {
       @include screen('sm') {
-        width: calc((100% - 10px)/2);
+        width: calc((100% - 10px) / 2);
         margin-right: 10px;
       }
 
@@ -2042,7 +2135,6 @@
   }
 
   &__note {
-
     &:first-child {
       margin-top: -10px;
 
@@ -2070,7 +2162,6 @@
     }
 
     .time {
-
       &__text {
         @include screen('lg') {
           max-width: 270px;
@@ -2196,6 +2287,32 @@
     }
   }
 
+  &__label {
+    @include text-big;
+
+    display: inline-block;
+    font-weight: 700;
+    line-height: (26 / 18);
+    box-sizing: border-box;
+    color: $color-black;
+
+    @include screen('sm') {
+      @include text16;
+    }
+  }
+
+  &__pound {
+    display: inline-block;
+    font-weight: 400;
+    line-height: (26 / 18);
+    box-sizing: border-box;
+    color: $color-new-input;
+
+    @include screen('sm') {
+      @include text16;
+    }
+  }
+
   &__imitation {
     @include text-big;
 
@@ -2214,6 +2331,16 @@
 
     &_tar {
       text-align: right;
+    }
+
+    &_fx {
+      display: inline-flex;
+      justify-content: flex-start;
+      align-items: baseline;
+    }
+
+    &_sb {
+      justify-content: space-between;
     }
   }
 
