--- a/app/blocks/offer-info/offer-info.scss
+++ b/app/blocks/offer-info/offer-info.scss
@@ -14,6 +14,10 @@
 
   .box {
     margin-right: 8px;
+
+    &_size8 {
+      margin-right: 4px;
+    }
   }
 
   &__title {
@@ -44,6 +48,12 @@
 
     &_dark2 {
       color: $color-oi-dark;
+    }
+
+    &_fz11 {
+      @include text-small;
+
+      line-height: (20 / 11);
     }
 
     &_fz13 {
