--- a/app/styles/helpers/_variables.scss
+++ b/app/styles/helpers/_variables.scss
@@ -174,6 +174,7 @@ $color-oi-dark: #575f6a;
 $color-input-dark: #313339;
 $color-new-disabled: #b4bbc6;
 $color-new-input: #515964;
+$color-gray-lightest: #adbabd;
 
 // ##########
 // Transitions
