--- a/app/components/popup-payment-summary/popup-payment-summary.pug
+++ b/app/components/popup-payment-summary/popup-payment-summary.pug
@@ -7,3 +7,13 @@ mixin popup-payment-summary()
         +payment-summary
       +payment-summary-panel
     block
+
+mixin popup-payment-summary-guest()
+  +popup-free(true)._combined._white.popup-payment-summary&attributes(attributes)
+    +popup-header.popup__header_white.popup__header_border.popup__header_border_md.hide-from-md
+      +popup-title Payment Summary
+    +popup-content
+      div.popup__scrollblock.js-scrollbar-light-md
+        +payment-summary(true)
+      +payment-summary-panel
+    block
