--- a/app/pages/sitemap/sitemap.pug
+++ b/app/pages/sitemap/sitemap.pug
@@ -13,6 +13,7 @@ block content
         +link(href="#popup-cancelation-contract").js-popup-top Popup cancel contract
         +link(href="#popup-new-offer-h-v2").js-popup Popup New Tenancy offer update
         +link(href="#popup-payment-summary").js-popup Popup Payment Summary
+        +link(href="#popup-payment-summary-guest").js-popup Popup Payment Summary Guest
 
       +page-title._small Страницы (обновление от 27.12.2019)
       br
@@ -170,3 +171,4 @@ block popups
   +popup-cancelation-contract#popup-cancelation-contract
   +popup-new-offer-v2#popup-new-offer-h-v2
   +popup-payment-summary#popup-payment-summary
+  +popup-payment-summary-guest#popup-payment-summary-guest
