update for payment summary guest version

--- a/app/blocks/contract-status/contract-status.scss
+++ b/app/blocks/contract-status/contract-status.scss
@@ -1,5 +1,6 @@
 .contract-status {
   $b: &;
+
   position: relative;
   display: flex;
   flex-direction: column;
@@ -253,7 +254,7 @@
     left: 40px;
     bottom: 24px;
     margin-top: auto;
-    letter-spacing: -0.02em;
+    letter-spacing: -.02em;
 
     @include screen('lg') {
       left: 20px;
@@ -293,7 +294,6 @@
   }
 
   &__button {
-
     &_wide {
       width: 100%;
     }
