--- a/app/blocks/files-card/files-card.scss
+++ b/app/blocks/files-card/files-card.scss
@@ -12,7 +12,7 @@
   position: relative;
 
   @include screen('md') {
-    padding: 27px 20px 30px 20px;
+    padding: 27px 20px 30px;
   }
 
   @include screen('sm') {
