--- a/app/blocks/form-elements/form-elements.pug
+++ b/app/blocks/form-elements/form-elements.pug
@@ -14,6 +14,15 @@ mixin input-number(name, value)
     +e.button.js-numberbox-minus
     +e.button.js-numberbox-plus
 
+mixin input-number-readonly(name, value)
+  - var val = value || 0;
+  +b.LABEL.is-readonly.input-numberbox__&attributes(attributes)
+    +e.field
+      +e.label amount:
+      +e.INPUT.input.js-numberbox-input(type="text" name=name value=val readonly)
+    +e.button.js-numberbox-minus
+    +e.button.js-numberbox-plus
+
 mixin input-numbers(name, placeholder, min, max)
   +b.input-numbers&attributes(attributes)
     - if (min && max) {
