--- a/app/components/payment-summary/payment-summary.pug
+++ b/app/components/payment-summary/payment-summary.pug
@@ -31,7 +31,7 @@ mixin payment-summary(guest)
                 else
                   +form-section-wrapper
                     +form-box('Rent period start', 'calendar2')._icon
-                      +input.js-datepicker(type="text" name="startDate" value="13 January 2020" placeholder="Rent period start")
+                      +input.js-datepicker(type="text" name="startDate" value="13 January 2020" placeholder="Rent period start" readonly)
               +col({xl: 6, sm:12 })
                 if guest
                   +form-section-wrapper._aie._h100p
