--- a/app/components/popup-payment-summary/popup-payment-summary.pug
+++ b/app/components/popup-payment-summary/popup-payment-summary.pug
@@ -3,7 +3,7 @@ mixin popup-payment-summary()
     +popup-header.popup__header_white.popup__header_border.popup__header_border_md.hide-from-md
       +popup-title Payment Summary
     +popup-content
-      div.popup__scrollblock.js-scrollbar-light-md
+      div.popup__scrollblock.popup__scrollblock_original
         +payment-summary
       +payment-summary-panel
     block
@@ -13,7 +13,7 @@ mixin popup-payment-summary-guest()
     +popup-header.popup__header_white.popup__header_border.popup__header_border_md.hide-from-md
       +popup-title Payment Summary
     +popup-content
-      div.popup__scrollblock.js-scrollbar-light-md
+      div.popup__scrollblock.popup__scrollblock_original
         +payment-summary(true)
       +payment-summary-panel
     block
