--- a/app/blocks/form-elements/form-range.scss
+++ b/app/blocks/form-elements/form-range.scss
@@ -77,7 +77,7 @@
     height: 3px;
     position: absolute;
     background-color: $color-main;
-    background-image: linear-gradient(to right, rgba(11, 208, 167, 0.99) 0%, rgba(0, 129, 153, 0.99) 100%);
+    background-image: linear-gradient(to right, rgba(11, 208, 167, .99) 0%, rgba(0, 129, 153, .99) 100%);
     border-radius: 2px;
     z-index: 2;
   }
