--- a/app/blocks/heading/heading.scss
+++ b/app/blocks/heading/heading.scss
@@ -36,8 +36,7 @@
     z-index: 1;
     overflow: hidden;
 
-    &::before,
-    &::after {
+    &::before, &::after {
       @include pseudo;
 
       top: 0;
