--- a/app/blocks/hide-button/hide-button.scss
+++ b/app/blocks/hide-button/hide-button.scss
@@ -8,12 +8,12 @@
   padding: 8px;
   background-color: $color-white;
   border-radius: 3px;
-  box-shadow: 1px 1px 8px rgba(34, 42, 46, 0.06);
+  box-shadow: 1px 1px 8px rgba(34, 42, 46, .06);
 
   @include screen('sm') {
     padding: 6px 7px;
     border-radius: 2px;
-    box-shadow: 1px 1px 4px rgba(34, 42, 46, 0.06);
+    box-shadow: 1px 1px 4px rgba(34, 42, 46, .06);
   }
 
   &__text {
@@ -48,9 +48,7 @@
     }
 
     #{$b} {
-
       &__text {
-
         @include screen('sm') {
           @include text9;
 
