--- a/app/blocks/popups/popups.scss
+++ b/app/blocks/popups/popups.scss
@@ -521,6 +521,10 @@
         height: 100%;
         overflow: auto;
       }
+
+      .is-choices-dropdown-showed & {
+        overflow: hidden;
+      }
     }
   }
 
