--- a/app/components/payment-summary/payment-summary.scss
+++ b/app/components/payment-summary/payment-summary.scss
@@ -1,6 +1,7 @@
 .payment-summary {
   $b: &;
 
+  position: relative;
   display: block;
   box-sizing: border-box;
   padding: 50px 70px 126px 45px;
