--- a/app/components/popup-payment-summary/popup-payment-summary.scss
+++ b/app/components/popup-payment-summary/popup-payment-summary.scss
@@ -30,6 +30,14 @@
   }
 
   .popup {
+    &__content {
+      @include screen('md') {
+        display: block;
+        overflow: auto;
+        overscroll-behavior: none;
+      }
+    }
+
     &__header {
       @include screen('md') {
         padding-right: 40px;
