--- a/app/blocks/form-elements/form-selects.scss
+++ b/app/blocks/form-elements/form-selects.scss
@@ -35,7 +35,7 @@
     }
   }
 
-  &[data-type*="select-one"] {
+  &[data-type*='select-one'] {
     .choices__inner {
       padding-bottom: 0;
       background-color: rgba(0, 0, 0, 0);
@@ -214,6 +214,7 @@
     width: 100%;
     max-height: 100px;
     box-sizing: border-box;
+    overscroll-behavior: none;
   }
 
   &__close {
@@ -269,7 +270,7 @@
         width: 100%;
         height: 100%;
         z-index: 1;
-        box-shadow: 0 0 49px rgba(34, 42, 46, 0.25);
+        box-shadow: 0 0 49px rgba(34, 42, 46, .25);
         display: none;
       }
 
@@ -325,11 +326,11 @@
         width: 434px;
         max-width: none;
         background-color: $color-white;
-        border-radius: 0 3px 3px 3px;
+        border-radius: 0 3px 3px;
         border: 3px solid $color-white;
         border-top-width: 0;
         border-top-color: transparent;
-        box-shadow: 0 0 49px rgba(34, 42, 46, 0.25);
+        box-shadow: 0 0 49px rgba(34, 42, 46, .25);
         margin-top: -2px;
         box-sizing: border-box;
 
@@ -435,15 +436,13 @@
       &--dropdown {
         border-color: $color-white;
         border-top-color: transparent;
-        border-radius: 0 3px 3px 3px;
+        border-radius: 0 3px 3px;
       }
     }
 
     &.is-readonly {
       #{$k} {
-
         &__inner {
-
           &::before {
             opacity: .4;
           }
@@ -724,7 +723,6 @@
       font-weight: 400;
       line-height: (26 / 18);
       width: 100%;
-      box-sizing: border-box;
       border-radius: 0;
       // color: $color-basic;
       color: $color-black;
@@ -793,7 +791,7 @@
           font-weight: 400;
           padding: 0 6px;
 
-          &[data-value=""] {
+          &[data-value=''] {
             display: none;
           }
         }
@@ -856,7 +854,6 @@
 
     &_underline-light {
       #{$k} {
-
         &__list--single {
           border-color: $color-border-light;
         }
@@ -961,7 +958,7 @@
           font-weight: 400;
           padding: 0 6px;
 
-          &[data-value=""] {
+          &[data-value=''] {
             display: none;
           }
         }
